# MIKASA-Robo

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  mikasa_robo_vla_envs.csv  pyproject.toml
.github/workflows/: publish-docs.yml  publish-pypi.yml
baselines/ppo/: ppo_memtasks.py  ppo_memtasks_lstm.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py
docs/source/_templates/: footer-counter.html
examples/: eval_demo.py
mikasa_robo_suite/: __init__.py
mikasa_robo_suite/rl/dataset_collectors/: get_dataset_collectors_ckpt.py  get_mikasa_robo_datasets.py  parallel_dataset_collection_manager.py  parallel_training_manager.py
mikasa_robo_suite/rl/memory_envs/: __init__.py  bunch_of_colors.py  chain_of_colors.py  intercept.py  intercept_grab.py  remember_color.py  remember_shape.py  remember_shape_and_color.py  rotate_lenient.py  rotate_strict.py  seq_of_colors.py  shell_game_pick.py  shell_game_push.py  shell_game_touch.py  take_it_back.py
mikasa_robo_suite/rl/utils/: shapes.py  wrappers.py
mikasa_robo_suite/vla/: benchmarking.py
mikasa_robo_suite/vla/dataset_collectors/: README.md  get_dataset_collectors_ckpt.py  get_mikasa_robo_datasets.py  get_mikasa_robo_datasets_motion_planning.py  parallel_dataset_collection_manager.py
mikasa_robo_suite/vla/memory_envs/: __init__.py  batteries_checker_easy_vla.py  batteries_checker_hard_vla.py  blink_count_button_press_vla.py  bunch_of_colors_vla.py  chain_of_colors_vla.py  find_imposter_color_vla.py  find_imposter_shape_and_color_vla.py  find_imposter_shape_vla.py  gather_and_recall_vla.py  intercept_grab_vla.py  intercept_vla.py  remember_color_vla.py  remember_shape_and_color_vla.py  remember_shape_vla.py  rotate_lenient_vla.py  rotate_strict_vla.py  seq_of_colors_vla.py  shell_game_color_lamp_touch_vla.py  shell_game_pick_vla.py  shell_game_push_vla.py  shell_game_shuffle_color_lamp_touch_vla.py  shell_game_shuffle_touch_vla.py  shell_game_touch_vla.py  take_it_back_vla.py  timed_transfer_vla.py  trace_shape_seq_vla.py  trace_shape_vla.py
mikasa_robo_suite/vla/utils/: __init__.py  apply_wrappers.py  dataset_naming.py  shapes.py  wrappers.py
mikasa_robo_suite/vla/utils/motion_planning/: motion_planning_batteries_checker_easy.py  motion_planning_batteries_checker_hard.py  motion_planning_remember_long.py  (+10 more)
utils/: prepare_benchmark_demo_videos.py
utils/convert_npz_to_rlds/: README.md  convert_npz_task_to_rlds.py
utils/convert_rlds_to_lerobot/: README.md  convert_rlds_to_lerobot.py  pyproject.toml  test.py
